Thu Aug 24 18:51:53 1995  Theodore Y. Ts'o  <tytso@dcl>

	* .Sanitize: Update file list

Thu Jul 27 15:23:26 EDT 1995	Paul Park	(pjpark@mit.edu)
	* configure.in - Check for the sizes of short, int and long.
	* des.c - Cast mit_des_ecb_encrypt arguments correctly.
	* pcbc_encrypt.c - Remove inclusion of k5-config.h.
	* verify.c - Fix compiler grumbles.


Fri Jul 7 16:22:13 EDT 1995	Paul Park	(pjpark@mit.edu)
	* Makefile.in - Remove LDFLAGS, it's set by configure.

Wed Jun 28 17:09:34 1995  Mark Eichin  <eichin@cygnus.com>

	* read_passwd.c, configure.in: use HAS_ANSI_VOLATILE instead.

Tue Jun 27 23:17:11 1995  Mark Eichin  <eichin@cygnus.com>

	* read_passwd.c: only use volatile if __STDC__ is 1.

Tue Jun 27 15:51:10 EDT 1995	Paul Park	(pjpark@mit.edu)
	* util.c - Make #endif ansi-compliant.
	* read_passwd.c - Add signal name parameter to signal handler to
		conform to prototype.

Mon Jun 26 14:39:18 1995  Sam Hartman  <hartmans@tardis.MIT.EDU>

	* Makefile.in (LDFLAGS): Removed bogus -g.  It breaks on shared
        links when you're actually calling ld not cc.

Fri Jun 23 18:16:09 1995  Tom Yu  (tlyu@dragons-lair)

	* configure.in: fix Sam's typo so libdes425.a gets symlinked
		properly.

Fri Jun 23 12:45:43 1995  Sam Hartman  <hartmans@tardis.MIT.EDU>

	* configure.in: New static library targets.

	* Makefile.in : Add new static library target handling.

Fri Jun 16 17:00:04 EDT 1995	Paul Park	(pjpark@mit.edu)
	* k4_glue.c - Add this module with the "req_act_vno" symbol definition
		so that we can use old versions of K4.
	* configure.in - Check for #pragma weak.
	* Makefile.in - Add k4_glue.c, Add K4 to include list.

Fri Jun 16 11:15:11 EDT 1995	Paul Park	(pjpark@mit.edu)
	* configure.in - Add install target for shared library.


Thu Jun 15 18:00:45 EDT 1995	Paul Park	(pjpark@mit.edu)
	* Makefile.in - Change "./DONE" target to "DONE" since we have a rule
		for how to build it.  Also add definitions for shared library
		building rules.